getting img on the notebook

--- a/challenge_starting_kit.ipynb
+++ b/challenge_starting_kit.ipynb
@@ -12,7 +12,7 @@
     "<table style=\"width:50%; background-color:white;\">\n",
     "  <tr style=\"background-color:transparent;\">\n",
     "    <td align=\"center\"; style=\"background-color:transparent; width: 30%;\">\n",
-    "        <img src=\"img/ip_paris.png\" width=\"450px\"/>\n",
+    "        <img src=\"https://github.com/emanieluu/ramp_challenge_m2ds/blob/main/img/ip_paris.png\" width=\"450px\"/>\n",
     "    </td>\n",
     "  </tr>\n",
     " </table>\n",
