deleting the mare

--- a/challenge_starting_kit.ipynb
+++ b/challenge_starting_kit.ipynb
@@ -12,7 +12,7 @@
     "<table style=\"width:50%; background-color:white;\">\n",
     "  <tr style=\"background-color:transparent;\">\n",
     "    <td align=\"center\"; style=\"background-color:transparent; width: 30%;\">\n",
-    "        <img src=\"https://github.com/emanieluu/ramp_challenge_m2ds/blob/main/img/ip_paris.png\" width=\"450px\"/>\n",
+    "        <img src=\"img/ip_paris.png\" width=\"450px\"/>\n",
     "    </td>\n",
     "  </tr>\n",
     " </table>\n",
@@ -540,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is the benchmark you will have to outperform in this challenge : "
+    "During this challenge, our metric will the Root Mean Squared error (RMSE). Here is the benchmark you will have to outperform : "
    ]
   },
   {
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -716,44 +716,30 @@
       "\u001b[38;5;178m\u001b[1mTesting Spotify Popularity Prediction\u001b[0m\n",
       "\u001b[38;5;178m\u001b[1mReading train and test files from ./data/ ...\u001b[0m\n",
       "\u001b[38;5;178m\u001b[1mReading cv ...\u001b[0m\n",
-      "\u001b[38;5;178m\u001b[1mTraining submissions/starting_kit ...\u001b[0m\n",
+      "\u001b[38;5;178m\u001b[1mTraining submissions\\starting_kit ...\u001b[0m\n",
       "\u001b[38;5;178m\u001b[1mCV fold 0\u001b[0m\n",
-      "/Users/emanieluu/Library/Python/3.9/lib/python/site-packages/rampwf/score_types/mare.py:15: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return np.mean(np.abs((y_true - y_pred) / y_true))\n",
-      "\t\u001b[38;5;178m\u001b[1mscore   rmse  mare       time\u001b[0m\n",
-      "\t\u001b[38;5;10m\u001b[1mtrain\u001b[0m   \u001b[38;5;10m\u001b[1m8.23\u001b[0m   \u001b[38;5;150minf\u001b[0m  \u001b[38;5;150m26.108286\u001b[0m\n",
-      "\t\u001b[38;5;12m\u001b[1mvalid\u001b[0m  \u001b[38;5;12m\u001b[1m21.72\u001b[0m   \u001b[38;5;105minf\u001b[0m   \u001b[38;5;105m0.524588\u001b[0m\n",
-      "\t\u001b[38;5;1m\u001b[1mtest\u001b[0m   \u001b[38;5;1m\u001b[1m21.32\u001b[0m   \u001b[38;5;218minf\u001b[0m   \u001b[38;5;218m0.149517\u001b[0m\n",
+      "\t\u001b[38;5;178m\u001b[1mscore   rmse       time\u001b[0m\n",
+      "\t\u001b[38;5;10m\u001b[1mtrain\u001b[0m   \u001b[38;5;10m\u001b[1m8.23\u001b[0m  \u001b[38;5;150m80.238641\u001b[0m\n",
+      "\t\u001b[38;5;12m\u001b[1mvalid\u001b[0m  \u001b[38;5;12m\u001b[1m21.72\u001b[0m   \u001b[38;5;105m0.635999\u001b[0m\n",
+      "\t\u001b[38;5;1m\u001b[1mtest\u001b[0m   \u001b[38;5;1m\u001b[1m21.32\u001b[0m   \u001b[38;5;218m0.181013\u001b[0m\n",
       "\u001b[38;5;178m\u001b[1mCV fold 1\u001b[0m\n",
-      "/Users/emanieluu/Library/Python/3.9/lib/python/site-packages/rampwf/score_types/mare.py:15: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return np.mean(np.abs((y_true - y_pred) / y_true))\n",
-      "\t\u001b[38;5;178m\u001b[1mscore   rmse  mare       time\u001b[0m\n",
-      "\t\u001b[38;5;10m\u001b[1mtrain\u001b[0m   \u001b[38;5;10m\u001b[1m8.23\u001b[0m   \u001b[38;5;150minf\u001b[0m  \u001b[38;5;150m26.112372\u001b[0m\n",
-      "\t\u001b[38;5;12m\u001b[1mvalid\u001b[0m  \u001b[38;5;12m\u001b[1m21.73\u001b[0m   \u001b[38;5;105minf\u001b[0m   \u001b[38;5;105m0.543580\u001b[0m\n",
-      "\t\u001b[38;5;1m\u001b[1mtest\u001b[0m   \u001b[38;5;1m\u001b[1m21.22\u001b[0m   \u001b[38;5;218minf\u001b[0m   \u001b[38;5;218m0.153153\u001b[0m\n",
+      "\t\u001b[38;5;178m\u001b[1mscore   rmse       time\u001b[0m\n",
+      "\t\u001b[38;5;10m\u001b[1mtrain\u001b[0m   \u001b[38;5;10m\u001b[1m8.23\u001b[0m  \u001b[38;5;150m82.829674\u001b[0m\n",
+      "\t\u001b[38;5;12m\u001b[1mvalid\u001b[0m  \u001b[38;5;12m\u001b[1m21.73\u001b[0m   \u001b[38;5;105m0.636954\u001b[0m\n",
+      "\t\u001b[38;5;1m\u001b[1mtest\u001b[0m   \u001b[38;5;1m\u001b[1m21.22\u001b[0m   \u001b[38;5;218m0.171995\u001b[0m\n",
       "\u001b[38;5;178m\u001b[1m----------------------------\u001b[0m\n",
       "\u001b[38;5;178m\u001b[1mMean CV scores\u001b[0m\n",
       "\u001b[38;5;178m\u001b[1m----------------------------\u001b[0m\n",
-      "/Users/emanieluu/Library/Python/3.9/lib/python/site-packages/numpy/core/_methods.py:232: RuntimeWarning: invalid value encountered in subtract\n",
-      "  x = asanyarray(arr - arrmean)\n",
-      "\t\u001b[38;5;178m\u001b[1mscore           rmse       mare        time\u001b[0m\n",
-      "\t\u001b[38;5;10m\u001b[1mtrain\u001b[0m   \u001b[38;5;10m\u001b[1m8.23\u001b[0m \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m±\u001b[0m\u001b[0m\u001b[0m \u001b[38;5;150m\u001b[38;5;150m0.0\u001b[0m04\u001b[0m  \u001b[38;5;150minf\u001b[0m \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m±\u001b[0m\u001b[0m\u001b[0m \u001b[38;5;150mnan\u001b[0m  \u001b[38;5;150m26.1\u001b[0m \u001b[38;5;150m\u001b[38;5;150m\u001b[38;5;150m±\u001b[0m\u001b[0m\u001b[0m \u001b[38;5;150m0.0\u001b[0m\n",
-      "\t\u001b[38;5;12m\u001b[1mvalid\u001b[0m  \u001b[38;5;12m\u001b[1m21.72\u001b[0m \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m±\u001b[0m\u001b[0m\u001b[0m \u001b[38;5;105m0.004\u001b[0m  \u001b[38;5;105minf\u001b[0m \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m±\u001b[0m\u001b[0m\u001b[0m \u001b[38;5;105mnan\u001b[0m  \u001b[38;5;105m0.5\u001b[0m \u001b[38;5;105m\u001b[38;5;105m\u001b[38;5;105m±\u001b[0m\u001b[0m\u001b[0m \u001b[38;5;105m0.01\u001b[0m\n",
-      "\t\u001b[38;5;1m\u001b[1mtest\u001b[0m   \u001b[38;5;1m\u001b[1m21.27\u001b[0m \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m±\u001b[0m\u001b[0m\u001b[0m \u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m54\u001b[0m  \u001b[38;5;218minf\u001b[0m \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m±\u001b[0m\u001b[0m\u001b[0m \u001b[38;5;218mnan\u001b[0m   \u001b[38;5;218m0.2\u001b[0m \u001b[38;5;218m\u001b[38;5;218m\u001b[38;5;218m±\u001b[0m\u001b[0m\u001b[0m \u001b[38;5;218m0.0\u001b[0m\n",
+      "\t\u001b[38;5;178m\u001b[1mscore           rmse        time\u001b[0m\n",
+      "\t\u001b[38;5;10m\u001b[1mtrain\u001b[0m   \u001b[38;5;10m\u001b[1m8.23\u001b[0m \u001b[38;5;150m\u001b[38;5;150m±\u001b[0m\u001b[0m \u001b[38;5;150m0.004\u001b[0m  \u001b[38;5;150m81.5\u001b[0m \u001b[38;5;150m\u001b[38;5;150m±\u001b[0m\u001b[0m \u001b[38;5;150m1.3\u001b[0m\n",
+      "\t\u001b[38;5;12m\u001b[1mvalid\u001b[0m  \u001b[38;5;12m\u001b[1m21.72\u001b[0m \u001b[38;5;105m\u001b[38;5;105m±\u001b[0m\u001b[0m \u001b[38;5;105m\u001b[38;5;105m0.0\u001b[0m04\u001b[0m   \u001b[38;5;105m0.6\u001b[0m \u001b[38;5;105m\u001b[38;5;105m±\u001b[0m\u001b[0m \u001b[38;5;105m0.0\u001b[0m\n",
+      "\t\u001b[38;5;1m\u001b[1mtest\u001b[0m   \u001b[38;5;1m\u001b[1m21.27\u001b[0m \u001b[38;5;218m\u001b[38;5;218m±\u001b[0m\u001b[0m \u001b[38;5;218m\u001b[38;5;218m0.0\u001b[0m54\u001b[0m   \u001b[38;5;218m0.2\u001b[0m \u001b[38;5;218m\u001b[38;5;218m±\u001b[0m\u001b[0m \u001b[38;5;218m0.0\u001b[0m\n",
       "\u001b[38;5;178m\u001b[1m----------------------------\u001b[0m\n",
       "\u001b[38;5;178m\u001b[1mBagged scores\u001b[0m\n",
       "\u001b[38;5;178m\u001b[1m----------------------------\u001b[0m\n",
-      "/Users/emanieluu/Library/Python/3.9/lib/python/site-packages/rampwf/score_types/mare.py:15: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return np.mean(np.abs((y_true - y_pred) / y_true))\n",
-      "/Users/emanieluu/Library/Python/3.9/lib/python/site-packages/rampwf/score_types/mare.py:15: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return np.mean(np.abs((y_true - y_pred) / y_true))\n",
-      "/Users/emanieluu/Library/Python/3.9/lib/python/site-packages/rampwf/score_types/mare.py:15: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return np.mean(np.abs((y_true - y_pred) / y_true))\n",
-      "/Users/emanieluu/Library/Python/3.9/lib/python/site-packages/rampwf/score_types/mare.py:15: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return np.mean(np.abs((y_true - y_pred) / y_true))\n",
-      "\t\u001b[38;5;178m\u001b[1mscore   rmse  mare\u001b[0m\n",
-      "\t\u001b[38;5;12m\u001b[1mvalid\u001b[0m  \u001b[38;5;12m\u001b[1m21.75\u001b[0m   \u001b[38;5;105minf\u001b[0m\n",
-      "\t\u001b[38;5;1m\u001b[1mtest\u001b[0m   \u001b[38;5;1m\u001b[1m21.12\u001b[0m   \u001b[38;5;218minf\u001b[0m\n"
+      "\t\u001b[38;5;178m\u001b[1mscore   rmse\u001b[0m\n",
+      "\t\u001b[38;5;12m\u001b[1mvalid\u001b[0m  \u001b[38;5;12m\u001b[1m21.75\u001b[0m\n",
+      "\t\u001b[38;5;1m\u001b[1mtest\u001b[0m   \u001b[38;5;1m\u001b[1m21.12\u001b[0m\n"
      ]
     }
    ],
